<resources>
    <string name="app_name">AI Calibration</string>
    <string name="dms_calibration">Calibration</string>
    <string name="dms_calibration2">Video feature settings</string>
    <string name="start_calibration">Start Calibration</string>
    <string name="start_dms_calibration">DMS Calibration</string>
    <string name="bsd_calibration">BSD Calibration</string>
    <string name="adas_configuration">ADAS Config</string>
    <string name="dms_configuration">DMS Config</string>
    <string name="configuration">Configuration</string>
    <string name="settings2">Transportation Ministry standard function settings</string>
    <string name="settings">Settings</string>
    <string name="steering_wheel">steering wheel</string>
    <string name="app_exit_toast">Press again to exit.</string>
    <string name="virtual_speed">Real-time speed analog input</string>
    <string name="real_speed">Real-time speed (km/h)</string>
    <string name="virtual_speed_hint">Real–time speed analog input(0–255):</string>
    <string name="login_name">UserName:</string>
    <string name="login_password">Password:</string>
    <string name="login_ok">Login</string>
    <string name="horizontal_line">Horizon (pixel)</string>
    <string name="engine_line">"Hood line:   ("</string>
    <string name="car_central_line">Distance between the center line of the vehicle and the optical center offset (in pixels)</string>
    <string name="camera_height">Height of camera from the ground (cm)</string>
    <string name="camera_central">Camera center:</string>
    <string name="camera_to_wheel">Horizontal distance of Camera from the left front wheel (cm)</string>
    <string name="camera_to_axle">Camera distance from front axle (cm)</string>
    <string name="target_to_camera">Target distance from camera:cm</string>
    <string name="target_to_ground">The distance from the bottom of the target to the ground:cm</string>
    <string name="camera_to_wheel_hint">When the current wheel is behind the camera, the input value is negative </string>
    <string name="car_width">Vehicle width (cm)</string>
    <string name="camera_to_bumper">Camera distance from the front of the vehicle (cm)</string>
    <string name="camera_to_left_wheel">Horizontal distance of Camera from the left front wheel (cm)</string>
    <string name="param_reset">Reset</string>
    <string name="camera_switch">Switch</string>
    <string name="horizontal_line2">"horizon"</string>
    <string name="engine_line2">"Hood line"</string>
    <string name="car_central_line2">"Vehicle center line"</string>
    <string name="adas_warning_enable">Automatically captured events</string>
    <string name="lane_shifting_speed_enable">Lane deviation activation speed (km/h)</string>
    <string name="front_car_collide_speed">Forward collision warning</string>
    <string name="lane_shift_warning">Lane departure alarming</string>
    <string name="car_too_close_warning">Close Distance alarming</string>
    <string name="people_too_close">Pedestrian approaching alarming</string>
    <string name="frequency_change_lane">Frequent Lane Changing alarming</string>
    <string name="frequency_change_lane_sens">Detection period</string>
    <string name="adas_auto_capture">Automatically capture events</string>
    <string name="lane_left_shift_sens">Lane deviation left sensitivity (cm):</string>
    <string name="lane_right_shift_sens">Lane deviation right sensitivity (cm):</string>
    <string name="car_distance_keep_sens">Sensitivity to maintain distance (s):</string>
    <string name="front_car_collide_sens">Forward vehicle collision sensitivity (s):</string>
    <string name="gps_detecting_interval">GPS positioning time interval (s):</string>
    <string name="sensitivity">Sensitivity (s)</string>
    <string name="sensitivity_low">Low</string>
    <string name="sensitivity_middle">Middle</string>
    <string name="sensitivity_high">High</string>
    <string name="presicion">Allowable interval error (ms)</string>
    <string name="presicion2">Detection times (times)</string>
    <string name="warnging_time">Alarm interval (s)</string>
    <string name="time_counter">frequency</string>
    <string name="eye_close_warn">Eyes closed alarm sensitivity (s)</string>
    <string name="yawn_warn">Yawn alarm sensitivity (s)</string>
    <string name="phone_call_warn">Phone-calling alarm sensitivity (s)</string>
    <string name="smoking_warn">Smoking alarm sensitivity (s)</string>
    <string name="look_around_warn">Look left and right Alarm sensitivity (s)</string>
    <string name="low_head_warn">Head down alarm sensitivity (s)</string>
    <string name="not_in_position_warn">Leaving driving position alarm sensitivity (s)</string>
    <string name="occlusion_lens_warn">Block the lens Alarm sensitivity (s)</string>
    <string name="dms_auto_capture">Auto capture alarm sensitivity (s)</string>
    <string name="driver_changed_warn">Driver change detection interval (s)</string>
    <string name="infrared_blocking_warn">Infrared blocking alarm sensitivity (s)</string>
    <string name="hands_no_in_position_warn">Hands off the steering wheel Alarm sensitivity (s)</string>
    <string name="no_belts_warn">Seat belt detection interval (s)</string>
    <string name="driver_identify_warn">Driver recognition alarm sensitivity (s)</string>
    <string name="dms_cali_success_toast">DMS calibration succeeded</string>
    <string name="dms_cali_failure_toast">DMS calibration failed</string>
    <string name="dms_cali_hint">The driver normally sits in the driving position, looking at the driving direction, adjust the camera position to ensure that the face is in the frame, and click the calibration button to start</string>
    <string name="bsd_cali_hint">Please dragging the calibration line to calibrate, and click the save button in the upper right corner to save</string>
    <string name="bsd_cali_hint2">1. Please connect to the WIFI hotspot of MDVR using your phone, ensuring that you have already connected to the WIFI hotspot of the MDVR; \n2.  Please click the start calibration button, then drag the calibration line to calibrate, and click the save button in the upper right corner to save</string>
    <string name="bsd_cali_hint3">Please click the start calibration button, drag the upper left or lower right point of the calibration box to zoom the calibration box, and change the position by dragging the middle position of the calibration box, then click the save button in the upper right corner to save</string>
    <string name="reboot_adas_hint">The device is restarting, please wait…</string>
    <string name="reboot_adas_success_hint">Successful restart</string>
    <string name="uvc_disconnect_hint">Device is not connected</string>
    <string name="write_params_hint">save successfully</string>
    <string name="dialog_save">save</string>
    <string name="dialog_ok">confirm</string>
    <string name="dialog_cancel">cancel</string>
    <string name="reboot_hint">It takes about 40s to restart the device. Please confirm whether to restart?</string>
    <string name="restore_default_hint">Restore default parameters</string>
    <string name="restore_default_hint2">Please confirm whether to restore ADAS/DMS configuration parameters to default values?</string>
    <string name="restore_default">Restore all configurations</string>
    <string name="dms_rotate_set">DMS calibration to screen settings</string>
    <string name="dms_rotate_set_hint">DMS calibration is successful, and it will take effect after restarting the AP</string>
    <string name="virtual_speed_dispatch">Sending real-time simulate speed</string>
    <string name="virtual_speed_dispatch_hint">Real-time  simulate speed sending takes effect</string>
    <string name="virtual_speed_dispatch_hint2">Simulation speed real-time sending off</string>
    <string name="steering_wheel_horizontal_size">Steering wheel (horizontal) size</string>
    <string name="steering_wheel_vertical_size">Steering wheel (vertical) size</string>
    <string name="steering_wheel_horizontal_position">Steering wheel position (horizontal movement)</string>
    <string name="steering_wheel_vertical_position">Steering wheel position (vertical movement)</string>
    <string name="no_num_format_hint">Illegal number</string>
    <string name="not_valid_value">The input value is not in the allowable range, and the boundary value is used by default</string>
    <string name="version_info">Version information query</string>
    <string name="volume_adjust">Volume adjustment</string>
    <string name="basic_setting_params">Basic function configuration</string>
    <string name="speed_adjust">Speed threshold adjustment</string>
    <string name="mode_adjust">Mode setting</string>
    <string name="mode_adjust_1">Normal mode</string>
    <string name="mode_adjust_2">Demo mode</string>
    <string name="mode_adjust_3">Custom mode</string>
    <string name="function_adjust">Function selection</string>
    <string name="function_adjust_1">Play cell phone</string>
    <string name="function_adjust_2">Front BSD</string>
    <string name="function_adjust_3">Right BSD</string>
    <string name="adas_mode_manual">Manual calibration</string>
    <string name="adas_mode_semiautomatic">Semi-automatic</string>
    <string name="adas_mode_automatic">Automatic calibration</string>
    <string name="adas_mode_automatic_panel">Calibration plate</string>
    <string name="dvr_reboot_settings">Restart DVR</string>
    <string name="mcu_reboot_settings">Restart MCU</string>
    <string name="ai_config_adjust">AI function configuration</string>
    <string name="ai_config_adjust_enable">AI function enable switch</string>
    <string name="dms_distract_adjust">DMS distraction range setting</string>
    <string name="setting_dms_cali_params">DMS calibration value</string>
    <string name="setting_rated_params">Parameter limits setting</string>
    <string name="setting_rated_load">Load limit(t)</string>
    <string name="setting_rated_height">Load height limit(m)</string>
    <string name="setting_dms_cali_pitch">DMS Pitch:</string>
    <string name="setting_dms_cali_yaw">DMS Yaw:</string>
    <string name="setting_ip_config">IP configuration</string>
    <string name="setting_save_configs">Export all parameters to a file</string>
    <string name="setting_language">Language settings</string>
    <string name="setting_ip_host">Host IP address</string>
    <string name="setting_ip_device">Device IP address</string>
    <string name="setting_ip_server">Server IP</string>
    <string name="dms_step1">Install and adjust the DMS camera position according to the following steps, no need to save settings.</string>
    <string name="dms_step2">1. It is recommended that the DMS camera be installed in front of the driver or on the A-pillar of the cockpit. Try to place the camera as close to the driver\'s front when installing. Ensure that the driver\'s head is not lost in the camera display. For some vehicle models, the camera installation may cause facial obstruction in the display, so the camera can be shifted to the left/right until it does not obscure the face.</string>
    <string name="dms_step3">2. When the DMS camera is installed in front of the driver, ensure that the up and down angle of the face is less than 20°; when installed on the A-pillar, ensure that the left-right angle of the face is less than 30°.</string>
    <string name="dms_step4">3. If the seat belt detection function is required, it must be ensured that at least 10cm under the driver\'s shoulders can be seen on the screen.</string>
    <string name="power_key">Power</string>
    <string name="back_key">Back</string>
    <string name="volumn_add">Volume+</string>
    <string name="volumn_del">Volume-</string>
    <string name="home_key">Home</string>
    <string name="system_reboot">Reboot</string>
    <string name="screen_dpi">HD</string>
    <string name="exit_full">Exit</string>
</resources>